# Operating-Organism

./: .gitignore  .gitmodules  ARCHITECTURE.md  BAREMETAL_STANDARD.md  CODEBASE_STRUCTURE_ANALYSIS.md  CONTRIBUTING.md  FOUNDER_GUIDE.md  LANGUAGE_STRATEGY.md  LICENSE  Makefile  NOTICE  OO_ORGAN_CATALOG.md  OO_PRIME_ACTIONS.md  OO_TOPOLOGY.md  README.md  REPOSITORY_MINIMAL.md  REPO_GUIDE.md  SECURITY.md  SIGNATURE.md  analyze_crash.py  analyze_crash2.py  analyze_crash3.py  analyze_elf.sh  analyze_elf2.sh  analyze_elf3.sh  analyze_jumptable.py  analyze_pe.py  analyze_plt.py  boot-oo.ps1  build-img-with-models.sh  check-syntax.sh  create-boot-mtools.sh  create-v3-gpt.sh  diagnose_trained_model.py  disasm_repl.sh  djibmark.h  flash-hud-usb.ps1  flash-usb-v3.ps1  inject_gold_samples.py  interface.h  (+9 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
bench/: results.csv
colony-server/: .gitignore
core/: llmk_log.h  llmk_oo.c  llmk_oo.h  llmk_oo_infer.c  llmk_oo_infer.h  llmk_recovery_orchestrator.h  llmk_sentinel.h  llmk_stubs.c  llmk_zones.c  llmk_zones.h  oo_boot_bridge.c  oo_boot_bridge.h  worktree_archive_stubs.c
diop/: README.md  __init__.py  architecture.md  bridge.py  cli.py  daemon.py  first_boot.py  model_blueprints.py  model_store.py  paths.py  profile_store.py  system_writer.py  twin_store.py
docs/: ARCHITECTURE.md  ARCHITECTURE_CENTRAL.md  COLONY_SERVER_ARCHITECTURE.md  DESIGN_PRINCIPLES.md  GOVERNANCE_BOUNDARIES.md  LANGUAGE_POLICY.md  MANIFESTO_OO.md  OO_ARCHITECTURE_LAYERS.md  OO_CONTROL_PLANES.md  OO_CROSS_ORGAN_FLOWS.md  OO_HOMEOSTASIS_INVARIANTS.md  OO_SOMAMIND_RUNTIME_CONTRACT.md  OO_VISION.md  ORGANISM_MANIFEST.md  PUBLIC_RELEASE_PLAYBOOK.md  README.md  README_CENTRAL_SPEC.md  ROADMAP.md  THIRD_PARTY_LICENSE_AUDIT.md  TRANSLATIONS.md  WEAK_MODULES_AUDIT.md  bug_report_template.md  new_module_template.md  (+2 more)
oo-dplus/: .gitignore  Cargo.toml  DPLUS.md  DPLUS_AUDIT_CLI.md  DPLUS_v2_SPEC.md  PHASE2_STATUS_DASHBOARD.md  PHASE2_VM_CONSENSUS_COMPLETE.md  README.md  ROADMAP_v2_COMPREHENSIVE.md  SPEC.md  dplus-audit-smoke.ps1
oo-dplus/examples/: vm_consensus_example.rs
oo-dplus/src/: cortex.rs  journal.rs  lib.rs  policy_vm.rs  resonance.rs  sentinel.rs  types.rs  warden.rs
oo-dplus/src/alloc/: bitmap.rs
oo-dplus/src/dplus/: judge.rs  merit.rs  mod.rs  module.rs  ops.rs  tests.rs  verifier.rs
oo-dplus/src/dplus_compiler/: ast.rs  auto_heal.rs  bytecode.rs  compiler.rs  executor.rs  lexer.rs  mod.rs  parser.rs  polyglot.rs  state_machine.rs  vm.rs
oo-dplus/src/soma/: math.rs  mod.rs  tokenizer.rs
oo-kernel-rust/: Cargo.toml
oo-kernel-rust/src/: lib.rs
oo-kernel-rust/src/boot/: mod.rs  oo_uefi_entry.rs
oo-kernel-rust/src/hal/: mod.rs
oo-kernel-rust/src/inference/: mod.rs
oo-kernel-rust/src/memory/: mod.rs
oo-kernel-rust/src/policy/: mod.rs
yamaoo/modules/kernel_agent/: Cargo.toml
yamaoo/modules/kernel_agent/src/: main.rs
(+589 files in other folders)
